# cp-font-gen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  issue-1.md  justfile  pyproject.toml
docs/: README.md  architecture.md  configuration.md  development.md  logging.md  quick-start.md  troubleshooting.md  user-guide.md
docs/issues/resolved/: issue-1.md  issue-4.md
examples/: README.md  config-template.yaml
examples/emoji/: README.md  chars.txt  config.yaml
examples/icons/: README.md  config.yaml
examples/menu/: README.md  chars.txt  config.yaml
examples/minimal/: README.md  config.yaml
examples/multilingual/: README.md  chars.txt  config.yaml
examples/temperature/: README.md  config.yaml
src/cp_font_gen/: __init__.py  checker.py  cli.py  config.py  converter.py  generator.py  logger.py  tool_config.py  utils.py
tests/: __init__.py  conftest.py  test_checker.py  test_config.py  test_converter.py  test_generator.py  test_issue_1.py  test_logger.py  test_tool_config.py  test_unicode.py  test_utils.py
